[gd_scene load_steps=6 format=2]

[ext_resource path="res://Manage.gd" type="Script" id=1]
[ext_resource path="res://res/Wood24.jpg" type="Texture" id=2]
[ext_resource path="res://fonts/MainMenuFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/SubMenuFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Buttons/MenuButton.tscn" type="PackedScene" id=5]

[node name="ManageRoot" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 838.846, 670.866 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0

[node name="LabelLesson" type="Label" parent="VBoxContainer"]
margin_right = 620.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 3 )
text = "lessonList"
align = 1

[node name="LabelCheckActiveLessons" type="Label" parent="VBoxContainer"]
margin_top = 62.0
margin_right = 620.0
margin_bottom = 101.0
custom_fonts/font = ExtResource( 4 )
autowrap = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 105.0
margin_right = 620.0
margin_bottom = 109.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 113.0
margin_right = 620.0
margin_bottom = 663.0
rect_min_size = Vector2( 0, 550 )
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 667.0
margin_right = 620.0
margin_bottom = 743.0

[node name="ButtonAddLesson" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 5 )]
margin_left = 0.0
margin_right = 600.0
margin_bottom = 76.4549
rect_min_size = Vector2( 600, 60 )
text_loc = "createLesson"
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ButtonAddLesson" to="." method="_on_ButtonAddLesson_pressed"]
