[gd_scene load_steps=7 format=2]

[ext_resource path="res://Screens/Manage.gd" type="Script" id=1]
[ext_resource path="res://res/Wood24.jpg" type="Texture" id=2]
[ext_resource path="res://Interface/Interactive/HeaderContainer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Interface/TextDisplay/LabelAdaptive.tscn" type="PackedScene" id=4]
[ext_resource path="res://Interface/Interactive/ScrollContainerDraggable.tscn" type="PackedScene" id=5]
[ext_resource path="res://Interface/Buttons/MenuButton.tscn" type="PackedScene" id=6]

[node name="ManageRoot" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 838.846, 670.866 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
custom_constants/separation = 10

[node name="HeaderContainer" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_right = 550.0

[node name="LabelCheckActiveLessons" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 60.0
margin_right = 550.0
margin_bottom = 60.0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 70.0
margin_right = 550.0
margin_bottom = 74.0

[node name="ScrollContainer" parent="VBoxContainer" instance=ExtResource( 5 )]
margin_top = 84.0
margin_right = 550.0
margin_bottom = 678.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
rect_clip_content = true

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 688.0
margin_right = 550.0
margin_bottom = 764.455

[node name="ButtonImport" parent="VBoxContainer/CenterContainer" instance=ExtResource( 6 )]
margin_left = 225.0
margin_right = 325.0
text_loc = "importLesson"

[node name="HBoxContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 774.0
margin_right = 550.0
margin_bottom = 850.455

[node name="ButtonAddLesson" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 6 )]
margin_left = 225.0
margin_right = 325.0
text_loc = "createLesson"
[connection signal="back_pressed" from="VBoxContainer/HeaderContainer" to="." method="go_back"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/ButtonImport" to="." method="_on_ButtonImport_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ButtonAddLesson" to="." method="_on_ButtonAddLesson_pressed"]
